--- a/app/src/main/res/layout/nav_header_home_screen.xml
+++ b/app/src/main/res/layout/nav_header_home_screen.xml
@@ -10,11 +10,12 @@
 
 
     <ImageButton
+        android:id="@+id/icon_close"
         android:src="@drawable/icon_close"
         android:scaleType="centerInside"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="40dp"
         android:layout_marginBottom="20dp"
         android:layout_marginStart="10dp"
         android:background="@color/clear"/>
@@ -28,8 +29,7 @@
         android:background="@drawable/box_background_white"
         android:weightSum="5"
         android:clickable="true"
-        android:focusable="true"
-        android:onClick="onClickToFragment">
+        android:focusable="true" >
 
         <LinearLayout
             android:layout_width="wrap_content"
