Ada waaktu2annyaa di todo list hehe

--- a/app/src/main/res/menu/activity_home_screen_drawer.xml
+++ b/app/src/main/res/menu/activity_home_screen_drawer.xml
@@ -16,18 +16,13 @@
             android:title="Back to Home" />
     </group>
 
-    <!-- Grouping
-    <item android:title="Test Group">
+    <item android:title="Experimental Test *Hidden">
         <menu>
             <item
-                android:id="@+id/settingsTest"
-                android:icon="@drawable/icon_setting"
-                android:title="Settings" />
-            <item
-                android:id="@+id/backToHomeTest"
-                android:icon="@drawable/icon_home"
-                android:title="Back to Home" />
+                android:id="@+id/testScreen"
+                android:icon="@drawable/icon_edit"
+                android:title="In to the Void" />
         </menu>
-    </item> -->
+    </item>
 
 </menu>
