--- a/app/src/main/res/layout/activity_fragment_main.xml
+++ b/app/src/main/res/layout/activity_fragment_main.xml
@@ -46,7 +46,7 @@
             android:layout_marginEnd="0dp"
             android:background="@color/white"
             app:itemIconTint="@color/fontColor"
-            app:itemTextColor="@color/fontColor"
+            app:itemTextColor="@color/white"
             app:menu="@menu/navigation" />
     </RelativeLayout>
 
