--- a/app/src/main/res/layout/fragment_todo_list.xml
+++ b/app/src/main/res/layout/fragment_todo_list.xml
@@ -129,7 +129,7 @@
             <ListView
                 android:id="@+id/toDoList"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:divider="@color/clear"
                 android:paddingBottom="5dp"
                 android:visibility="gone"/>
