--- a/app/src/main/res/layout/list_layout.xml
+++ b/app/src/main/res/layout/list_layout.xml
@@ -14,7 +14,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="5dp" >
+        android:gravity="center_vertical"
+        android:layout_marginTop="5dp"
+        android:weightSum="6">
 
         <CheckBox
             android:id="@+id/pesan"
@@ -24,21 +26,20 @@
             android:textColor="@color/fontColor"
             android:textSize="15sp"
             android:text="This will be the isiPesan"
-            android:maxLines="1"
             android:layout_weight="2"
             android:checked="false" />
 
         <TextView
             android:id="@+id/time"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:gravity="center_vertical|end"
             android:textAlignment="textEnd"
             android:text="Day, N PM"
             android:textColor="@color/fontColor"
             android:textSize="15sp"
             android:visibility="visible"
-            android:layout_weight="3" />
+            android:layout_weight="4" />
 
     </LinearLayout>
 </LinearLayout>
