--- a/app/src/main/res/layout/fragment_todo_list.xml
+++ b/app/src/main/res/layout/fragment_todo_list.xml
@@ -153,7 +153,7 @@
                 android:gravity="center"
                 android:paddingStart="35dp"
                 android:paddingEnd="35dp"
-                android:visibility="gone">
+                android:visibility="visible">
 
                 <ImageView
                     android:layout_width="match_parent"
@@ -186,7 +186,7 @@
                 android:layout_height="match_parent"
                 android:divider="@color/clear"
                 android:paddingBottom="5dp"
-                android:visibility="visible"/>
+                android:visibility="gone"/>
         </LinearLayout>
     </LinearLayout>
 
