--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,7 +35,7 @@
         <item name="android:textStyle">bold</item>
         <item name="android:headerDividersEnabled">true</item>
         <item name="android:typeface">normal</item>
-        <item name="android:background">@color/colorPrimary</item>
+        <item name="android:background">@color/colorAccent</item>
     </style>
 
 </resources>
