--- a/app/src/main/res/layout/fragment_item_list.xml
+++ b/app/src/main/res/layout/fragment_item_list.xml
@@ -18,41 +18,95 @@
     <LinearLayout
         android:id="@+id/addNewItem"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
             android:layout_marginTop="30dp"
             android:layout_marginBottom="20dp"
             android:background="@drawable/box_background_white">
 
-            <ImageButton
-                android:id="@+id/addTaskButton"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/icon_add"
-                android:padding="10dp"
-                android:background="@color/clear"
-                android:scaleType="centerInside"
-                />
-
-            <EditText
-                android:id="@+id/addItem"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:textColor="@color/fontColor"
-                android:paddingStart="0dp"
-                android:paddingEnd="15dp"
-                android:hint="Add new item..."
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
+
+                <ImageButton
+                    android:id="@+id/startAddItem"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/icon_add"
+                    android:padding="10dp"
+                    android:background="@color/clear"
+                    android:scaleType="centerInside"
+                    android:visibility="visible"/>
+                <ImageButton
+                    android:id="@+id/addItemButton"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/icon_add"
+                    android:tint="@color/primaryBlue"
+                    android:padding="10dp"
+                    android:background="@color/clear"
+                    android:scaleType="centerInside"
+                    android:visibility="gone"/>
+
+                <EditText
+                    android:id="@+id/addItem"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:textColor="@color/fontColor"
+                    android:paddingStart="0dp"
+                    android:paddingEnd="15dp"
+                    android:hint="Add new item..."
+                    android:textSize="15sp"
+                    android:textColorHint="@color/fontColor"
+                    android:background="@color/clear"/>
+            </LinearLayout>
+
+            <DatePicker
+                android:id="@+id/datePicker"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:datePickerMode="calendar"
+                android:calendarViewShown="false"
+                android:visibility="gone"/>
+
+            <TimePicker
+                android:id="@+id/timePicker"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone" />
+
+            <Button
+                android:id="@+id/confirmDate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/primaryBlue"
+                android:text="Confirm Date"
+                android:textColor="@color/white"
                 android:textSize="15sp"
-                android:textColorHint="@color/fontColor"
-                android:background="@color/clear"/>
+                android:visibility="gone"/>
+
+            <Button
+                android:id="@+id/confirmTime"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/primaryBlue"
+                android:text="Confirm Time"
+                android:textColor="@color/white"
+                android:textSize="15sp"
+                android:visibility="gone"/>
+
+
         </LinearLayout>
+
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -77,10 +131,10 @@
 
                 <ImageButton
                     android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:layout_gravity="end"
+                    android:layout_height="20dp"
                     android:src="@drawable/icon_down"
                     android:scaleType="centerInside"
+                    android:layout_marginTop="3dp"
                     android:padding="7dp"
                     android:layout_alignParentEnd="true"
                     android:background="@color/clear"/>
@@ -91,10 +145,48 @@
                 android:layout_height="1dp"
                 android:background="@drawable/divider_gray"/>
 
+            <LinearLayout
+                android:id="@+id/ifEmpty"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="center"
+                android:paddingStart="35dp"
+                android:paddingEnd="35dp"
+                android:visibility="visible">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+                    android:background="@color/clear"
+                    android:src="@drawable/empty_list"
+                    android:layout_marginBottom="45dp"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Hurray! No items to do here."
+                    android:textColor="@color/fontColor"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:textAlignment="center"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="How about adding new item?"
+                    android:textColor="@color/fontColor"
+                    android:textSize="15sp"
+                    android:textAlignment="center"/>
+            </LinearLayout>
+
             <ListView
                 android:id="@+id/itemList"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="match_parent"
+                android:divider="@color/clear"
+                android:paddingBottom="5dp"
+                android:visibility="gone"/>
         </LinearLayout>
     </LinearLayout>
 
