--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,10 @@
     <color name="black">#000</color>
     <color name="white">#fff</color>
     <color name="clear">@null</color>
+
+    <!-- Custom Color -->
+    <color name="technopreneurColor">#3D358B</color>
+    <color name="softBlue">#2D9CDB</color>
+    <color name="opaque">#FFffffff</color>
+    <color name="transparent">#00ffffff</color>
 </resources>
