--- a/app/src/main/res/layout/fragment_files.xml
+++ b/app/src/main/res/layout/fragment_files.xml
@@ -155,6 +155,7 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:paddingTop="10dp"
+                android:paddingBottom="10dp"
                 android:visibility="visible">
 
                 <GridView
