Landing, loading, register page

--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/background"
-    tools:context=".LandingActivity">
+    tools:context=".Authentication.LandingActivity">
 
     <LinearLayout
         android:id="@+id/just_space"
