--- a/app/src/main/res/layout/content_home_screen.xml
+++ b/app/src/main/res/layout/content_home_screen.xml
@@ -30,7 +30,9 @@
                 android:textStyle="bold"
                 android:textSize="24sp"
                 android:layout_marginStart="30dp"
-                android:layout_marginEnd="30dp"/>
+                android:layout_marginEnd="30dp"
+                android:layout_marginTop="30dp"
+                android:visibility="gone"/>
 
 
             <CalendarView
