--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -65,7 +65,7 @@
             android:textSize="14sp"
             android:textStyle="bold"
             android:textColor="@color/fontColor"
-            android:layout_marginTop="35dp"
+            android:layout_marginTop="30dp"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"/>
 
@@ -83,7 +83,6 @@
                 android:layout_height="40dp"
                 android:layout_marginStart="40dp"
                 android:background="@color/clear"
-                android:hint="Search files..."
                 android:inputType="textPassword"
                 android:maxLines="1"
                 android:paddingStart="10dp"
@@ -121,8 +120,18 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
         android:gravity="center">
+
+        <ProgressBar
+            android:id="@+id/loading_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/login_btn"
@@ -135,9 +144,7 @@
             android:backgroundTint="@color/primaryBlue"
             android:background="@drawable/box_background_white"
             android:paddingTop="12dp"
-            android:paddingBottom="12dp"
-            android:layout_marginStart="30dp"
-            android:layout_marginEnd="30dp"/>
+            android:paddingBottom="12dp" />
     </LinearLayout>
 
 </LinearLayout>
