--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -138,7 +138,6 @@
                 android:layout_height="40dp"
                 android:layout_marginStart="40dp"
                 android:background="@color/clear"
-                android:hint="Search files..."
                 android:inputType="textPassword"
                 android:maxLines="1"
                 android:paddingStart="10dp"
@@ -164,8 +163,18 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
         android:gravity="center">
+
+        <ProgressBar
+            android:id="@+id/loading_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+            android:visibility="gone"/>
 
         <TextView
             android:id="@+id/register_btn"
@@ -178,9 +187,7 @@
             android:backgroundTint="@color/primaryBlue"
             android:background="@drawable/box_background_white"
             android:paddingTop="12dp"
-            android:paddingBottom="12dp"
-            android:layout_marginStart="30dp"
-            android:layout_marginEnd="30dp"/>
+            android:paddingBottom="12dp" />
     </LinearLayout>
 
 </LinearLayout>
