--- a/app/src/main/res/layout/content_home_screen.xml
+++ b/app/src/main/res/layout/content_home_screen.xml
@@ -17,16 +17,85 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <CalendarView
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginStart="30dp"
+                android:layout_marginEnd="30dp"
+                android:layout_marginTop="30dp"
                 android:background="@drawable/box_background_white"
-                android:layout_margin="30dp">
+                android:padding="10dp">
 
-            </CalendarView>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginBottom="20dp"
+                    android:gravity="center_vertical">
+
+                    <ImageView
+                        android:id="@+id/prev_mon_btn"
+                        android:layout_width="10dp"
+                        android:layout_height="10dp"
+                        android:layout_marginEnd="10dp"
+                        android:src="@drawable/icon_left_arrow"/>
+                    <TextView
+                        android:id="@+id/prev_mon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="MMM"
+                        android:textStyle="bold"
+                        android:textColor="@color/primaryBlue"
+                        android:textSize="14sp"
+                        android:paddingEnd="20dp"/>
+                    <TextView
+                        android:id="@+id/curr_mon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Month"
+                        android:textAlignment="center"
+                        android:textStyle="bold"
+                        android:textColor="@color/fontColor"
+                        android:textSize="24sp"
+                        android:layout_weight="1"/>
+                    <TextView
+                        android:id="@+id/next_mon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="MMM"
+                        android:textStyle="bold"
+                        android:textColor="@color/primaryBlue"
+                        android:textSize="14sp"
+                        android:paddingStart="20dp"/>
+                    <ImageView
+                        android:id="@+id/next_mon_btn"
+                        android:layout_width="10dp"
+                        android:layout_height="10dp"
+                        android:layout_marginStart="10dp"
+                        android:src="@drawable/icon_right_arrow"/>
+                </LinearLayout>
+
+                <com.github.sundeepk.compactcalendarview.CompactCalendarView
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/compactcalendar_view"
+                    android:layout_width="fill_parent"
+                    android:padding="20dp"
+                    android:layout_height="250dp"
+                    app:compactCalendarTargetHeight="250dp"
+                    app:compactCalendarTextSize="12sp"
+                    app:compactCalendarBackgroundColor="@color/white"
+                    app:compactCalendarTextColor="@color/fontColor"
+                    app:compactCalendarCurrentSelectedDayBackgroundColor="@color/primaryBlue"
+                    app:compactCalendarCurrentDayBackgroundColor="@color/white"
+                    app:compactCalendarMultiEventIndicatorColor="@color/technopreneurColor"
+                    app:compactCalendarCurrentDayTextColor="@color/primaryBlue"
+                    app:compactCalendarCurrentSelectedDayTextColor="@color/white"/>
+            </LinearLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
