Icon and label app

--- a/app/src/main/res/layout/content_home_screen.xml
+++ b/app/src/main/res/layout/content_home_screen.xml
@@ -91,7 +91,7 @@
                     app:compactCalendarTextColor="@color/fontColor"
                     app:compactCalendarCurrentSelectedDayBackgroundColor="@color/primaryBlue"
                     app:compactCalendarCurrentDayBackgroundColor="@color/white"
-                    app:compactCalendarMultiEventIndicatorColor="@color/technopreneurColor"
+                    app:compactCalendarMultiEventIndicatorColor="@color/primaryBlue"
                     app:compactCalendarCurrentDayTextColor="@color/primaryBlue"
                     app:compactCalendarCurrentSelectedDayTextColor="@color/white"/>
             </LinearLayout>
