--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -61,6 +61,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="horizontal"
+                android:layout_marginEnd="7dp"
                 android:gravity="center">
 
                 <TextView
@@ -82,7 +83,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="horizontal"
-                android:layout_marginStart="13dp"
+                android:layout_marginStart="7dp"
                 android:gravity="center">
 
                 <TextView
