--- a/app/src/main/res/layout/layout_toolbar_main.xml
+++ b/app/src/main/res/layout/layout_toolbar_main.xml
@@ -12,14 +12,14 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/backToolbar"
+            android:id="@+id/hbgToolbar"
             android:layout_width="20dp"
             android:layout_height="match_parent"
-            android:src="@drawable/icon_back"/>
+            android:src="@drawable/icon_hamburger"/>
 
         <TextView
             android:id="@+id/titleToolbar"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Title"
             android:textSize="32sp"
@@ -27,6 +27,21 @@
             android:textStyle="bold"
             android:layout_marginStart="20dp"
             android:layout_weight="1"/>
+
+        <ImageView
+            android:id="@+id/notifToolbar"
+            android:layout_width="22dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/icon_notif"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="20dp"/>
+
+        <ImageView
+            android:id="@+id/profileToolbar"
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/profile_usera"
+            android:layout_marginEnd="20dp"/>
 
     </LinearLayout>
 </android.support.v7.widget.Toolbar>
