--- a/app/src/main/res/layout/app_bar_home_screen.xml
+++ b/app/src/main/res/layout/app_bar_home_screen.xml
@@ -1,25 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".Home.HomeScreen">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:titleTextColor="@color/fontColor"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-    </android.support.design.widget.AppBarLayout>
+    <include layout="@layout/layout_toolbar_main" />
 
     <include layout="@layout/content_home_screen" />
 
@@ -32,4 +21,4 @@
         app:srcCompat="@drawable/icon_notif"
         android:tint="@color/colorPrimary"/>
 
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
