Toolbar for fragment

--- a/app/src/main/res/layout/activity_fragment_main.xml
+++ b/app/src/main/res/layout/activity_fragment_main.xml
@@ -18,17 +18,11 @@
         android:gravity="center" >
 
         <android.support.design.widget.AppBarLayout
+            android:id="@+id/appBarLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:theme="@style/AppTheme.AppBarOverlay">
+            android:layout_height="wrap_content" >
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                app:titleTextColor="@color/fontColor"
-                app:popupTheme="@style/AppTheme.PopupOverlay" />
+            <include layout="@layout/layout_toolbar_main" />
         </android.support.design.widget.AppBarLayout>
 
         <FrameLayout
