--- a/app/src/main/res/layout/fragment_committee.xml
+++ b/app/src/main/res/layout/fragment_committee.xml
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:layout_marginBottom="30dp"
+        android:background="@color/clear"
         android:orientation="vertical"/>
 
     <android.support.v7.widget.CardView
