--- a/app/src/main/res/layout/nav_header_home_screen.xml
+++ b/app/src/main/res/layout/nav_header_home_screen.xml
@@ -185,6 +185,66 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/item3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:padding="10dp"
+        android:background="@drawable/box_background_white"
+        android:weightSum="5"
+        android:visibility="gone"
+        android:clickable="true"
+        android:focusable="true" >
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:layout_weight="1">
+
+            <ImageButton
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:scaleType="centerInside"
+                android:src="@drawable/profile_technopreneur"
+                android:background="@color/clear" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="vertical"
+            android:layout_weight="3">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:background="@color/clear"
+                android:layout_marginStart="3dp"
+                android:text="Technopreneur"
+                android:maxLines="1"
+                android:textStyle="bold"
+                android:textColor="@color/fontColor"
+                android:textSize="20sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:background="@color/clear"
+                android:text="Project Officer"
+                android:maxLines="1"
+                android:layout_marginTop="5dp"
+                android:layout_marginStart="3dp"
+                android:longClickable="true"
+                android:textColor="@color/fontColor"
+                android:textSize="13sp" />
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/itemNew"
         android:layout_width="match_parent"
         android:layout_height="75dp"
