--- a/app/src/main/res/layout/content_home_screen.xml
+++ b/app/src/main/res/layout/content_home_screen.xml
@@ -28,7 +28,8 @@
                 android:layout_marginEnd="30dp"
                 android:layout_marginTop="30dp"
                 android:background="@drawable/box_background_white"
-                android:padding="10dp">
+                android:padding="10dp"
+                android:visibility="visible">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -83,8 +84,8 @@
                     xmlns:app="http://schemas.android.com/apk/res-auto"
                     android:id="@+id/compactcalendar_view"
                     android:layout_width="fill_parent"
+                    android:layout_height="210dp"
                     android:padding="20dp"
-                    android:layout_height="250dp"
                     app:compactCalendarTargetHeight="250dp"
                     app:compactCalendarTextSize="12sp"
                     app:compactCalendarBackgroundColor="@color/white"
@@ -123,32 +124,60 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:gravity="center_horizontal">
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:adjustViewBounds="true"
+                        android:background="@color/clear"
+                        android:src="@drawable/empty_agenda"
+                        android:padding="30dp"
+                        android:layout_marginBottom="10dp"/>
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Agendas here..."
+                        android:text="Woohoo! No agenda this week."
                         android:textAlignment="center"
                         android:textColor="@color/fontColor"
-                        android:layout_marginTop="50dp"
-                        android:layout_marginBottom="50dp"
-                        android:textSize="15sp"/>
+                        android:textStyle="bold"
+                        android:textSize="14sp"
+                        android:layout_marginTop="10dp"/>
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Load more..."
+                        android:text="How about joining a committee?"
                         android:textAlignment="center"
-                        android:textColor="@color/black"
-                        android:textStyle="bold"
-                        android:textSize="12sp"
-                        android:layout_marginTop="10dp"/>
+                        android:textColor="@color/fontColor"
+                        android:textSize="12sp" />
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:gravity="center"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginBottom="10dp">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="I'm in!"
+                            android:textSize="12sp"
+                            android:textColor="@color/white"
+                            android:textAlignment="center"
+                            android:backgroundTint="@color/primaryBlue"
+                            android:background="@drawable/box_background_white"
+                            android:paddingTop="5dp"
+                            android:paddingBottom="5dp"
+                            android:paddingStart="20dp"
+                            android:paddingEnd="20dp" />
+                    </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
-
-
-
 </LinearLayout>
